--- a/wp-content/plugins/goetz-site/blocks/cta/view.css
+++ b/wp-content/plugins/goetz-site/blocks/cta/view.css
@@ -112,7 +112,8 @@
   }
 
   .goetz-cta > div {
-    flex: 0 0 64.6667%;
+    flex: 1 1 64.6667%;
+    min-width: 0;
   }
 }
 
